# Salary-management-system

./: .gitignore  CLAUDE.md  README.md  implementation_plan.md
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: __init__.py  employee.py
backend/app/routers/: analytics.py  employees.py
backend/app/schemas/: employee.py
backend/app/services/: analytics_service.py  employee_service.py
backend/scripts/: seed.py
backend/tests/: __init__.py  conftest.py  test_analytics_service.py  test_api.py  test_employee_service.py  test_schemas.py
docs/: architecture.md  development-log.md  project_status.md  tradeoffs.md
docs/prompts/: 00-initial-planning.md  01-archie-db-model.md  02-logic-crud-service.md  03-logic-analytics-service.md  04-logic-routes-seed.md  05-vogue-pixel-frontend.md  06-sherlock-qa-audit.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/employees/: page.tsx
frontend/src/components/: CountryFilterDashboard.tsx  DashboardCharts.tsx  Sidebar.tsx  ThemeToggle.tsx
frontend/src/lib/: api.ts
